--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,18 +51,21 @@ dependencies {
   // use jdk8 java.time backport, as long app < Build.VERSION_CODES.O
   implementation("com.jakewharton.threetenabp:threetenabp:1.1.1")
   // Get kiwixlib online if it is not populated locally
-  if (file("../kiwixlib/src/main").list().length == 1) {
-    implementation 'org.kiwix.kiwixlib:kiwixlib:1.0.12'
-  } else {
-    implementation project(":kiwixlib")
-    archs = file("../kiwixlib/src/main/jniLibs").list()
-  }
+  //if (file("../kiwixlib/src/main").list().length == 1) {
+  //  implementation 'org.kiwix.kiwixlib:kiwixlib:1.0.12'
+  //} else {
+    implementation fileTree(include: ['*.aar'], dir: 'libs')
+    //archs = file("../kiwixlib/src/main/jniLibs").list()
+  //}
 
   // Android Support
   implementation "androidx.appcompat:appcompat:$appCompatVersion"
   implementation "com.google.android.material:material:$materialVersion"
   implementation "androidx.cardview:cardview:$cardViewVersion"
   implementation "androidx.multidex:multidex:$multidexVersion"
+  implementation 'com.getkeepsafe.relinker:relinker:1.3.1'
+
+
   implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
   implementation "androidx.core:core-ktx:1.0.2"
   implementation "androidx.fragment:fragment-ktx:1.0.0"
